--- a/config/locales/model.ja.yml
+++ b/config/locales/model.ja.yml
@@ -13,11 +13,12 @@ ja:
           # view側： User.human_attribute_name :name => "名前" /　t("activerecord.attributes.user.name")と同じ
           title: タイトル
           author: 著者
-          content: 本文
           published: 発行年月
+          content: 本文
           category_id: カテゴリ
           score: 点数
           portrait: 表紙
+          category: カテゴリ
   # 全てのmodelで共通して使用するattributesを定義
   attributes:
     created_at: 作成日
